Bug#12817 SHOW STATUS now blob fields    This fix is cancellation of ChangeSet    1.2329 05/07/12 08:35:30 reggie@linux.site +8 -0    Bug 7142  Show Fields from fails using Borland's dbExpress interface    The reason is we can't fix bug#7142 without    breaking of existing applications/APIs that worked fine with earlier 4.1    bug 7142 is fixed in 5.0

mysql-test/r/ps_1general.result:
  Bug #12817 SHOW STATUS now blob fields
mysql-test/r/ps_2myisam.result:
  Bug #12817 SHOW STATUS now blob fields
mysql-test/r/ps_3innodb.result:
  Bug #12817 SHOW STATUS now blob fields
mysql-test/r/ps_4heap.result:
  Bug #12817 SHOW STATUS now blob fields
mysql-test/r/ps_5merge.result:
  Bug #12817 SHOW STATUS now blob fields
sql/item.cc:
  Bug #12817 SHOW STATUS now blob fields
sql/sql_show.cc:
  Bug #12817 SHOW STATUS now blob fields
tests/mysql_client_test.c:
  Bug #12817 SHOW STATUS now blob fields