sql/item.cc
@@ -1973,14 +1973,7 @@ void Item::make_field(Send_field *tmp_field)
 
 void Item_empty_string::make_field(Send_field *tmp_field)
 {
-  enum_field_types type = FIELD_TYPE_VAR_STRING;  
-  if (max_length >= 16777216)    
-    type = FIELD_TYPE_LONG_BLOB;  
-  else if (max_length >= 65536)    
-    type = FIELD_TYPE_MEDIUM_BLOB;  
-  else if (max_length >= 256)    
-    type = FIELD_TYPE_BLOB;  
-  init_make_field(tmp_field, type);
+  init_make_field(tmp_field,FIELD_TYPE_VAR_STRING);
 }
 
 
